--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "prosemirror-transform",
-  "version": "1.1.3",
+  "name": "@jimpick/prosemirror-transform",
+  "version": "1.1.3-1",
   "description": "ProseMirror document transformations",
   "main": "dist/index.js",
+  "module": "src/index.js",
   "license": "MIT",
   "maintainers": [
     {
@@ -16,7 +17,7 @@
     "url": "git://github.com/prosemirror/prosemirror-transform.git"
   },
   "dependencies": {
-    "prosemirror-model": "^1.0.0"
+    "@jimpick/prosemirror-model": "^1.6.3-1"
   },
   "devDependencies": {
     "mocha": "^3.0.2",
